4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

utils/mapper.c: new command-line option "-addmap=<map>", to add a map to process.
Ryo 2007-02-04

plugins/cfpython/cfpython_object.c: Fix missing braces.
Alex Schultz 2007-02-03

plugins/cflogger/cflogger.c: Add missing return value in store_time().
plugins/cflogger/cflogger.c: Add missing call to va_end().
Andreas Kirschbaum 2007-01-29

utils/bwp.c: fix sort (sort by object's name). Fix memory leaks.
Ryo 2007-01-28

Implement feature request #822087: Apply below.
'apply' now has a new flag, '-b', that specified an item on the ground.
 lib/help/apply: updated.
 server/c_object.c: look for item on ground/in container.
Ryo 2007-01-21

Refactoring of move_apply -> move_on for several object classes.
Removed obsolete server/swamp.c file.
See types/ChangeLog for details.
    server/apply.c
    server/swamp.c
    server/time.c
Yann Chachkoff 2007-01-21

Some changes to the mapper.
 utils/mapper.c: some code cleaning. New tags.
 utils/templates/map.template map_with_exit.template: use new tags, legend.
Ryo 2007-01-21

server/spell_util.c: Consider all stats when swapping random stats due to
   a failed spell.
Andreas Kirschbaum 2007-01-21

Implement feature request #656195: More effects of confusion.
Three effects can happen:
 * one item is transformed temporarily to flowers
 * 2 random statistics are temporarily swapped
 * a random spell is cast.
A new force type is introduced, FORCE_TRANSFORMED_ITEM, which does some
magic when it expires.
Modified files:
 include/spells.h
 server/spell_util.c time.c
Ryo 2007-01-20

Partially revert patch from 2006-31-12: girdles are not armours for wearing restrictions.
 server/apply.c player.c
Ryo 2007-01-20
