@@ -16,6 +16,8 @@ else.  With this, include the file(s) that you changed.
 Changes for SVN:
 
 utils/mapper.c: new command-line option "-addmap=<map>", to add a map to process.
+ Now also take into account player_changer a an exit. Flag "rowmaps" to generate
+ maps with random tiles instead of items.
 Ryo 2007-02-04
 
 plugins/cfpython/cfpython_object.c: Fix missing braces.
